# LexicaForge

./: .bandit.yml  .env.example  .pre-commit-config.yaml  CNAME  README.md  alembic.ini  package.json  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci.yml  dependencies.yml  release.yml
docs/: index.html  script.js  styles.css
lexicaforge/api/: main.py
lexicaforge/api/schemas/: etymology.py
lexicaforge/core/: logging.py
lexicaforge/data/ingestion/: wiktionary.py
lexicaforge/db/: config.py
lexicaforge/db/migrations/: env.py
lexicaforge/db/models/: base.py  etymology.py
lexicaforge/java/: LexicaForge.java  LexicaForgeTest.java
lexicaforge/nlp/: parser.py
lexicaforge/nlp/cognates/: detector.py
lexicaforge/nlp/morphemes/: analyzer.py
lexicaforge/nlp/utils/: rust_utils.py  string_distance.py
lexicaforge/php/: LexicaForge.php  LexicaForgeTest.php
lexicaforge/rust/: Cargo.toml  build.py
lexicaforge/rust/src/: lib.rs  tests.rs
lexicaforge/rust_parser/: Cargo.toml
lexicaforge/rust_parser/src/: lib.rs
scripts/: benchmark_parser.py  ingest_wiktionary.py  init_db.py  setup.sh  setup_dev.py
tests/: conftest.py  runner.js  test_api.py  test_logging.py
tests/nlp/: test_cognate_detector.py  test_lexicaforge.py  test_morpheme_analyzer.py  test_parser.py  test_rust_utils.py  test_string_distance.py
