[package]
name = "lexicaforge_rust"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Performance-critical components for LexicaForge"

[lib]
name = "lexicaforge_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19", features = ["extension-module"] }
rayon = "1.8"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
unicode-segmentation = "1.10"
unicode-normalization = "0.1"
fst = "0.4"
memchr = "2.6"
aho-corasick = "1.1" 